--- a/package.json
+++ b/package.json
@@ -66,6 +66,9 @@
     "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "16.10.2"
   },
+  "resolutions": {
+    "graceful-fs": "4.2.4"
+  },
   "jest": {
     "preset": "react-native",
     "setupFiles": [
