Fixed issue on Xiaomi devices
Fixed the crashing outputtin the error:

D/testseb: Could not load zenroom native library: dalvik.system.PathClassLoader[DexPathList[[zip file "/data/app/com.example.zencode-ya8XzFehNo-Wm20sxIpU2A==/base.apk"],nativeLibraryDirectories=[/data/app/com.example.zencode-ya8XzFehNo-Wm20sxIpU2A==/lib/arm64, /system/lib64, /product/lib64]]] couldn't find "libzenroom.so"


05/20 09:54:28: Launching 'app' on Physical Device.
App restart successful without requiring a re-install.
$ adb shell am start -n "com.example.zencode/com.example.zencode.MainActivity" -a android.intent.action.MAIN -c android.intent.category.LAUNCHER
Connected to process 22761 on device 'xiaomi-m2007j17g-3e4ce50'.
Capturing and displaying logcat messages from application. This behavior can be disabled in the "Logcat output" section of the "Debugger" settings page.
I/Perf: Connecting to perf service.
I/FeatureParser: can't find gauguin.xml in assets/device_features/,it may be in /vendor/etc/device_features
E/libc: Access denied finding property "ro.vendor.df.effect.conflict"
    Access denied finding property "ro.vendor.knock.type"
D/testseb: Could not load zenroom native library: dalvik.system.PathClassLoader[DexPathList[[zip file "/data/app/com.example.zencode-ya8XzFehNo-Wm20sxIpU2A==/base.apk"],nativeLibraryDirectories=[/data/app/com.example.zencode-ya8XzFehNo-Wm20sxIpU2A==/lib/arm64, /system/lib64, /product/lib64]]] couldn't find "libzenroom.so"
D/testconsole: Executing Zenroom in verbose mode and printing the keypair only to console...
E/example.zencod: No implementation found for java.lang.String decode.zenroom.Zenroom.zenroom(java.lang.String, java.lang.String, java.lang.String, java.lang.String) (tried Java_decode_zenroom_Zenroom_zenroom and Java_decode_zenroom_Zenroom_zenroom__Ljava_lang_String_2Ljava_lang_String_2Ljava_lang_String_2Ljava_lang_String_2)
D/AndroidRuntime: Shutting down VM
E/AndroidRuntime: FATAL EXCEPTION: main
    Process: com.examp

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,14 +102,20 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    defaultConfig {
-        applicationId "com.dribia.decodeapp"
-        missingDimensionStrategy 'react-native-camera', 'general'
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 58
-        versionName "2.0.2"
+   defaultConfig {
+        applicationId "com.example.zencode"
+        minSdkVersion 16
+        targetSdkVersion 29
+        versionCode 1
+        versionName "1.0"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            abiFilters "armeabi-v7a", "x86", "armeabi", "mips"
+        }
     }
+    
     splits {
         abi {
             reset()
